# rag-loan-llm-model

./: README.md  app.py  create_faiss.py  loan_rag_enhanced.py  main.py  pyproject.toml  requirements.txt
vectorstore/db_faiss/: index.faiss  index.pkl
